<resources>
    <string name="app_name">Nearby Places</string>
    <string name="title_activity_maps">Nearby Places</string>
    <string name="restaurants">Restaurants</string>
    <string name="hospitals">Hospitals</string>
    <string name="banks">Banks</string>
    <string name="schools">Schools</string>
    <string name="hotels">Hotels</string>
    <string name="search">Search</string>
</resources>
